выполнен приветсвенный блок

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,29 +1,6 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
-
-@font-face {
-	font-family: "Advent Pro";
-	src: url("/fonts/advent-pro/AdventPro-Regular.woff2") format("woff2");
-	font-weight: 400;
-}
-
-@font-face {
-	font-family: "Advent Pro";
-	src: url("/fonts/advent-pro/AdventPro-Medium.woff2") format("woff2");
-	font-weight: 500;
-}
-
-@font-face {
-	font-family: "Advent Pro";
-	src: url("/fonts/advent-pro/AdventPro-SemiBold.woff2") format("woff2");
-	font-weight: 600;
-}
-
-@font-face {
-	font-family: "Advent Pro";
-	src: url("/fonts/advent-pro/AdventPro-Bold.woff2") format("woff2");
-	font-weight: 700;
-}
+@import "./fonts";
 
 body {
 	font-family: var(--font-sans);
@@ -31,6 +8,7 @@ body {
 
 :root {
 	--font-sans: "Advent Pro", "Roboto", ui-sans-serif, system-ui, sans-serif;
+	--font-amatic: "AmaticSC";
 	--ui-primary: #f1b17a;
 	--ui-primary-foreground: #1f1a17;
 	--ui-gray: #2b2623;
